--- a/TicTacToeApp/app/build.gradle
+++ b/TicTacToeApp/app/build.gradle
@@ -7,11 +7,11 @@ plugins {
 }
 
 android {
-    namespace 'com.plcoding.onlinetictactoe'
+    namespace 'com.example.tictactoeonline'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.plcoding.onlinetictactoe"
+        applicationId "com.example.tictactoeonline"
         minSdk 24
         targetSdk 33
         versionCode 1
